# KeyframeSimplifier

./: .env.example  .gitignore  README.md  pyproject.toml
src/cvat_tool/: cli.py  dto.py  keyframe_handler.py  keyframe_iou.py
src/cvat_tool/iou/: __init__.py  iou.py  iou_pytorch.py  matplot.py
tests/: test_attributes.py  test_iou.py  test_keyframe_iou.py  test_outside_frames.py
